[metadata]
name = exrex
author = Adam Tauber
author_email = asciimoo@gmail.com
license = AGPLv3+
description = Irregular methods for regular expressions
keywords =
    regexp
    generators
    string
    generation
    regex
    simplification
url = https://github.com/asciimoo/exrex
download_url = https://github.com/asciimoo/exrex/tarball/master
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Topic :: Utilities
    Environment :: Console
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[options]
py_modules = exrex
packages = find:
install_requires =
include_package_data = True

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts = exrex=exrex:__main__

[options.extras_require]
